--- a/index.html
+++ b/index.html
@@ -319,20 +319,76 @@
             </div>
         </div>
     </section>
+    <section class='section-form'>
+        <div class="row">
+            <h2>We're happy to hear from you</h2>
+        </div>
+        <form class='forms' method="POST" action='#'>
+            <div class="row">
+                <div class="col span-1-of-3">
+                    <label for='name'>Name</label>
+                </div>
+                <div class="col span-2-of-3">
+                    <input type='text' name='name' id='name' placeholder="Please enter your name" required/>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col span-1-of-3">
+                    <label for='email'>Email</label>
+                </div>
+                <div class="col span-2-of-3">
+                    <input type='email' name='email' id='email' placeholder="Please enter your email" required/>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col span-1-of-3">
+                    <label for='findus'>Find us</label>
+                </div>
+                <div class="col span-2-of-3">
+                    <select class='find-us' id='findus'>
+                        <option>Friends</option>
+                        <option>Advertisement</option>
+                        <option>other</option>
+                    </select>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col span-1-of-3">
+                    <label for='news'>Newsletter</label>
+                </div>
+                <div class="col span-2-of-3">
+                    <input type='checkbox' name='checkbox' id='news'  required checked/>Yes please
+                </div>
+            </div>
+            <div class="row">
+                <div class="col span-1-of-3">
+                    <label for='reach_us'>Drop us a line </label>
+                </div>
+                <div class="col span-2-of-3" id='reach_us'>
+                     <textarea name="textareas">
+                     </textarea>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col span-1-of-3">
+                    <label>&nbsp;</label>
+                </div>
+                <div class="col span-2-of-3">
+                    <input type="submit" value='Send it'/>
+                </div>
+            </div>
+        </form>
+    </section>
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
 </body>
 </html>
 <!-- 
-    Title:
+    Title: We're happy to hear from you
 
-Plan 1: Premium
-
-
-Plan 2: 
-Access to newest creations
-Free delivery
-
-
-Plan 3: 
+Fields to include:
+Name
+Email
+How did you find us?
+Newsletter
 
  -->
