--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel='stylesheet' href='css/grid.css'/>
     <link rel='stylesheet' href='css/style.css'/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href='css/responsive.css'/>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
@@ -132,7 +133,7 @@
             <h2  class='kkk'>How it works &mdash;, Simple as 1, 2, 3</h2>
         </div>
         <div class='row'>
-             <div class='col span-1-of-2 steps-box'>
+             <div class='col span-1-of-2 steps-box rr'>
                  <img src="image/app-iPhone.png" class='iphone' />
              </div>
              <div class='col span-1-of-2 steps-box b5'>
@@ -379,16 +380,31 @@
             </div>
         </form>
     </section>
+    <footer>
+        <div class="row">
+            <div class='col span-1-of-2'>
+               <ul class='footers'> 
+                   <li><a href=''>About Us</a></li>
+                   <li><a href=''>Blog</a></li>
+                   <li><a href=''>Press</a></li>
+                   <li><a href=''>IOS app</a></li>
+                   <li><a href=''>Android app</a></li>
+               </ul>
+            </div>
+            <div class='col span-1-of-2'>
+                <ul class='social-icon'>
+                    <li><a href=""><ion-icon class='logo-facebook' name="logo-facebook"></ion-icon></a></li>
+                    <li><a href=""><ion-icon class="logo-twitter" name="logo-twitter"></ion-icon></a></li>
+                    <li><a href=""><ion-icon class="logo-instagram" name="logo-instagram"></ion-icon></a></li>
+                    <li><a href=""><ion-icon class="logo-github" name="logo-github"></ion-icon></a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
 </body>
 </html>
 <!-- 
-    Title: We're happy to hear from you
-
-Fields to include:
-Name
-Email
-How did you find us?
-Newsletter
+    
 
  -->
