--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
          <div class='row'>
               <img src='image/logo-white.png' class='logo' alt="logo"/>
               <ul class='lists'>
-                  <li><a href=''>Food delivery</a></li>
-                  <li><a href=''>How it works</a></li>
-                  <li><a href=''>Our cities</a></li>
-                  <li><a href=''>Sign up</a></li>
+                  <li><a href='#' class="food_delivery">Food delivery</a></li>
+                  <li><a href='#' class="how_it_works">How it works</a></li>
+                  <li><a href='#' class="our_cities">Our cities</a></li>
+                  <li><a href='#' class="sign_up">Sign up</a></li>
               </ul>
          </div>
      </nav>
      <div class='hero'>
          <h1>Goodbye junk food <br> Hello super healthy meals.</h1>
-         <a href='#' class='btn b1'>I am hungry</a>
-         <a href='#' class='btn b2'>Show me more</a>
+         <a href='#' class='btn b1 j11'>I am hungry</a>
+         <a href='#' class='btn b2 j22'>Show me more</a>
      </div>
  </header>
-    <section class='section-features'>
+    <section class='section-features food_delivery_1'>
         <div class="row">
             <h2>Get food fast &mdash; not fast food</h2>
             <p class='long-copy'>Hello, we’re Omnifood, your new premium food delivery service. We know you’re always busy. No time for cooking. So let us take care of that, we’re really good at it, we promise!
@@ -81,7 +81,7 @@
         </div>
     </section>
   
-    <section class='section-meal'>
+    <section class='section-meal g22'>
          <ul class='meal-showcase clearfix'>
               <li>
                   <figure>
@@ -128,7 +128,7 @@
        </ul>
     </section>
 
-    <section class='s3'>
+    <section class='s3 how_it_works_1'>
         <div class='row'>
             <h2  class='kkk'>How it works &mdash;, Simple as 1, 2, 3</h2>
         </div>
@@ -153,7 +153,7 @@
              </div>
         </div>
     </section>
-    <section class='section-cities'>
+    <section class='section-cities our_cities_1'>
         <div class="row">
             <h2>We're currently in these cities</h2>
         </div>
@@ -253,7 +253,7 @@
             </div>
         </div>
     </section>
-    <section class='section-plans'> 
+    <section class='section-plans g11'> 
         <div class="row">
             <h2> Start eating healthy today</h2>
         </div>
@@ -320,7 +320,7 @@
             </div>
         </div>
     </section>
-    <section class='section-form'>
+    <section class='section-form sign_up_1'>
         <div class="row">
             <h2>We're happy to hear from you</h2>
         </div>
@@ -401,6 +401,8 @@
             </div>
         </div>
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="script.js"></script>
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
 </body>
 </html>
