--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <div class="col span-1-of-4 test box">
                 <img src="image/lisbon-3.jpg" />
                 <h3>Lisbon</h3>
-                <div class='city-features'><ion-icon name="people-outline"></ion-icon>
+                <div class='city-features f123'><ion-icon name="people-outline"></ion-icon>
                     1600+ happy eaters
                 </div>
                 <div class='city-features'>
@@ -177,7 +177,7 @@
             <div class="col span-1-of-4 test box">
                 <img src="image/london.jpg" />
                 <h3>London</h3>
-                <div class='city-features'>
+                <div class='city-features f123'>
                     <ion-icon name="people-outline"></ion-icon>
                     1200+ happy eaters 
                 </div>
@@ -185,7 +185,7 @@
                     <ion-icon name="star-half-outline"></ion-icon>
                     50+ top chefs
                 </div>   
-                <div class='city-features'>
+                <div class='city-features f123'>
                     <ion-icon name="logo-twitter"></ion-icon>
                     <a href=''>@omnifood_london</a>
                 </div>   
@@ -194,11 +194,11 @@
             <div class="col span-1-of-4 test box">
                 <img src="image/san-francisco.jpg" />
                 <h3>San Francisco</h3>
-                <div class='city-features'>
+                <div class='city-features f123'>
                     <ion-icon name="people-outline"></ion-icon>
                     3700+ happy eaters
                 </div>
-                <div class='city-features'>
+                <div class='city-features f124'>
                     <ion-icon name="star-half-outline"></ion-icon>
                     160+ top chefs 
                 </div>  
@@ -211,7 +211,7 @@
             <div class="col span-1-of-4 test box">
                 <img src="image/berlin.jpg" />
                 <h3>Berlin</h3>
-                <div class='city-features'>  
+                <div class='city-features f125'>  
                     <ion-icon name="people-outline"></ion-icon>
                     2300+ happy eaters 
                 </div>
@@ -219,7 +219,7 @@
                     <ion-icon name="star-half-outline"></ion-icon>
                     110+ top chefs <a href=''></a>
                 </div> 
-                <div class='city-features'>
+                <div class='city-features f126'>
                     <ion-icon name="logo-twitter"></ion-icon>
                   <a href=''>  @omnifood_berlin</a>
                 </div>    
